fix letter-spacing from % to px

--- a/css/style.css
+++ b/css/style.css
@@ -13,14 +13,14 @@ body {
     font-family: Roboto;
     font-size: 16px;
     font-weight: 400;
-    letter-spacing: 2%;
+    letter-spacing: 0.3px;
     line-height: 24px;
 }
 
 h1,
 h2,
 h3 {
-    letter-spacing: 2%;
+    letter-spacing: 0.3px;
 }
 
 h1 {
